--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Thank you to everyone whom has contributed to streamlink / livestreamer.
+Thank you to everyone who has contributed to streamlink / livestreamer.
 
 For a list of contributors, see
 https://github.com/streamlink/streamlink/graphs/contributors
